# health-underwriting

./: .env.example  .gitignore  README.md  api_server.py  pyproject.toml  requirements.txt  setup_content_understanding.py
.github/agents/: copilot-instructions.md
app/: __init__.py  config.py  content_understanding_client.py  large_document_processor.py  openai_client.py  personas.py  processing.py  prompts.py  storage.py  token_tracker.py  tracing.py  underwriting_policies.py  utils.py
app/agents/: __init__.py  agent_tools.py  apple_health_risk.py  audit_trace.py  base.py  bias_fairness.py  business_rules_validation.py  communication.py  data_quality_confidence.py  evaluations.py  evaluations_v1_backup.py  foundry_invoker.py  foundry_service.py  health_data_analysis.py  knowledge_retrieval.py  mcp_stubs.py  orchestrator.py  policy_risk.py
app/claims/: api.py  indexer.py  search.py
app/cosmos/: models.py  (+3 more)
frontend/: .gitignore  README.md  fabric-mirroring-rbac.json  next.config.js  package-lock.json  package.json  tailwind.config.js
prompts/: README.md  apple-health-underwriting-policies.json  large-document-prompts.json
scripts/: deploy_agents_with_tools.py  index_claims_policies.py  redeploy_agents.py  setup_knowledge_grounding.py  setup_postgresql_rag.py  test_knowledge_grounding.py
tests/: check_indexes.py  test_agent_execution_toggle.py  test_agents.py  test_auto_claims_phase6_rag.py  test_auto_claims_phase9_migrations.py  test_config.py  test_cosmos_agent_runs.py  test_evaluations.py  test_mock_schemas.py  test_orchestration.py  test_postgresql_rag.py
(+104 files in other folders)
