[project]
name = "insureai"
version = "0.3.0"
description = "AI-powered workbench for insurance underwriters, claims processors, and end users using Azure AI Content Understanding, Azure AI Foundry Multi-Agent Orchestration, and Azure AI Evaluation SDK."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "azure-identity>=1.19.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "azure-storage-blob>=12.27.1",
    "gunicorn>=21.0.0",
    "asyncpg>=0.31.0",
    "tiktoken>=0.12.0",
    "azure-ai-evaluation>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest>=7.4.0",
]

[project.scripts]
api-server = "api_server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
